class RiceStatus < ApplicationRecord
  belongs_to :rice
end
